--- a/EmployeesRegister/Views/Employees/Corporate.cshtml
+++ b/EmployeesRegister/Views/Employees/Corporate.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<EmployeesRegister.Models.Employee>
 
 @{
-    ViewBag.Title = "Coporate";
+    ViewBag.Title = "Corporate";
 }
 
-<h2>Coporate</h2>
+<h2>Corporate</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
